Fix search suggestions display

--- a/_config/extensions.yml.sample
+++ b/_config/extensions.yml.sample
@@ -7,3 +7,6 @@ ExtensibleSearchPage:
 ExtensibleSearchPage_Controller:
   extensions:
     - 'SolrSearch_Controller'
+SiteTree:
+  extensions:
+    - 'SolrIndexable'
